bugfix: Fixed double display on night shifts, started work on filters in schedule table

--- a/JVD_app/static/css/output.css
+++ b/JVD_app/static/css/output.css
@@ -626,6 +626,10 @@ video {
   bottom: 0px;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -830,6 +834,10 @@ video {
 
 .w-60 {
   width: 15rem;
+}
+
+.w-64 {
+  width: 16rem;
 }
 
 .w-7 {
